# Tater-Native-Firmware

./: .gitignore  CMakeLists.txt  README.md  RELEASE_HIGHLIGHTS.md  partitions.csv  partitions_8mb.csv  platformio.ini  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_aec.c  audio_aec.h  audio_i2s.h  board.h  button.h  cache_storage.c  cache_storage.h  idf_component.yml  leds.h  native_settings.c  native_settings.h  ota_update.c  ota_update.h  playback.c  playback.h  provisioning.c  provisioning.h  tater_config.c  tater_config.h  tater_protocol.c  tater_protocol.h  wake_engine.cc  wake_engine.h  wake_model_assets.c  wake_model_assets.h  wake_sound_assets.c  wake_sound_assets.h  wifi_station.c  wifi_station.h
main/boards/: README.md
main/boards/respeaker_xvf3800/: README.md  audio_respeaker_xvf3800.c  board_respeaker_xvf3800.h
main/boards/respeaker_xvf3800/xmos/: README.md
main/boards/respeaker_xvf3800/xmos/host_reference/: README.md
main/boards/s3_box/: audio_s3_box.c  board_s3_box.h  display_s3_box.c
main/boards/sat1/: README.md  audio_sat1.c  board_sat1.h
main/boards/sat1/xmos/: README.md  sat1_xmos_1_0_4_dev_11_factory.md5  sat1_xmos_1_0_6_factory.md5
main/boards/sat1/xmos/source/: .gitignore  build_sat1_fixed_delay.sh  firmware_version.txt
main/boards/sat1/xmos/source/satellite-xmos-firmware/: satellite1.cmake
main/boards/sat1/xmos/source/satellite-xmos-firmware/audio_pipelines/reference/adec/: audio_pipeline_t1.c
main/boards/sat1/xmos/source/satellite-xmos-firmware/audio_pipelines/reference/adec_alt_arch/: audio_pipeline_t1.c
main/boards/sat1/xmos/source/satellite-xmos-firmware/audio_pipelines/reference/empty/: audio_pipeline_t1.c
main/boards/sat1/xmos/source/satellite-xmos-firmware/src/: main.c
main/boards/sat1/xmos/source/satellite-xmos-firmware/src/doa/: doa_cmds.h
main/boards/sat1/xmos/source/satellite-xmos-firmware/src/gpio/: gpio_servicer.c
main/boards/sat1/xmos/source/scripts/: fetch_dependencies.sh
main/boards/voice_pe/: audio_voice_pe.c  board_voice_pe.h  button_voice_pe.c  led_ring_voice_pe.c
main/boards/voice_pe/xmos/: README.md
main/boards/voice_pe/xmos/source/: .gitignore  README.md
main/models/: hey_tater.tflite
prebuilt_firmware/: latest.json  (+4 more)
(+8 files in other folders)
